cmake_minimum_required(VERSION 3.27)
project(CPP_EXAMPLES)

set(CMAKE_CXX_STANDARD 14)

add_executable(CPP_EXAMPLES
        01-hello.cpp
        02-namespace.cpp
        03-vars.cpp
        04-struct.cpp
        05-reference.cpp
        06-func-overload.cpp
        07-class.cpp
        08-access.cpp
        09-polymorphism.cpp
        10-constructor.cpp
        11-templates.cpp
        deneme.cpp)
